// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/workspaceSwitcher/WorkspaceSwitcher 2 more workspaces available 1`] = `
<div>
  <div
    class="WorkspaceOptions css-2b097c-container"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
    >
      <span
        id="aria-selection"
      />
      <span
        id="aria-context"
      >
         3 results available. Use Up and Down to choose options, press Enter to select the currently focused option, press Escape to exit the menu.
      </span>
    </span>
    <div
      class="WorkspaceOptions__control WorkspaceOptions__control--is-focused WorkspaceOptions__control--menu-is-open css-1pahdxg-control"
    >
      <div
        class="WorkspaceOptions__value-container css-g1d714-ValueContainer"
      >
        <div
          class="WorkspaceOptions__placeholder css-1wa3eu0-placeholder"
        >
          Search...
        </div>
        <div
          class="css-b8ldur-Input"
        >
          <div
            class="WorkspaceOptions__input"
            style="display: inline-block;"
          >
            <input
              aria-autocomplete="list"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              id="react-select-2-input"
              spellcheck="false"
              style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
      </div>
      <div
        class="WorkspaceOptions__indicators css-1hb7zxy-IndicatorsContainer"
      >
        <i
          class="CompassIcon icon-magnify CompassIcon"
        />
      </div>
    </div>
    <div
      class="WorkspaceOptions__menu css-26l3qy-menu"
    >
      <div
        class="WorkspaceOptions__menu-list css-4ljt47-MenuList"
      >
        <div
          class="Option "
          id="react-select-2-option-0"
          tabindex="-1"
        >
          <div
            class="workspaceTitle"
          >
            Dashboard
          </div>
        </div>
        <div
          class="Option "
          id="react-select-2-option-1"
          tabindex="-1"
        >
          <div
            class="workspaceTitle"
          >
            Workspace 2
          </div>
          <div
            class="boardCount"
          >
            2
             
            Boards
          </div>
        </div>
        <div
          class="Option "
          id="react-select-2-option-2"
          tabindex="-1"
        >
          <div
            class="workspaceTitle"
          >
            Workspace 3
          </div>
          <div
            class="boardCount"
          >
            3
             
            Boards
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/workspaceSwitcher/WorkspaceSwitcher no more workspaces available 1`] = `
<div>
  <div
    class="WorkspaceOptions css-2b097c-container"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
    >
      <span
        id="aria-selection"
      />
      <span
        id="aria-context"
      >
         1 result available. Use Up and Down to choose options, press Enter to select the currently focused option, press Escape to exit the menu.
      </span>
    </span>
    <div
      class="WorkspaceOptions__control WorkspaceOptions__control--is-focused WorkspaceOptions__control--menu-is-open css-1pahdxg-control"
    >
      <div
        class="WorkspaceOptions__value-container css-g1d714-ValueContainer"
      >
        <div
          class="WorkspaceOptions__placeholder css-1wa3eu0-placeholder"
        >
          Search...
        </div>
        <div
          class="css-b8ldur-Input"
        >
          <div
            class="WorkspaceOptions__input"
            style="display: inline-block;"
          >
            <input
              aria-autocomplete="list"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              id="react-select-3-input"
              spellcheck="false"
              style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
      </div>
      <div
        class="WorkspaceOptions__indicators css-1hb7zxy-IndicatorsContainer"
      >
        <i
          class="CompassIcon icon-magnify CompassIcon"
        />
      </div>
    </div>
    <div
      class="WorkspaceOptions__menu css-26l3qy-menu"
    >
      <div
        class="WorkspaceOptions__menu-list css-4ljt47-MenuList"
      >
        <div
          class="Option "
          id="react-select-3-option-0"
          tabindex="-1"
        >
          <div
            class="workspaceTitle"
          >
            Dashboard
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
